--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Samuel Stoke"
 title_separator          : "-"
 name                     : &name "Samuel Stoke"
 description              : &description "Mathematics and Computer Engineering student at Virginia Tech"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : https://samuelstoke-vt.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "academicpages/academicpages.github.io"
 
