--- a/_config.yml
+++ b/_config.yml
@@ -13,9 +13,9 @@ title                    : "Samuel Stoke"
 title_separator          : "-"
 name                     : &name "Samuel Stoke"
 description              : &description "Mathematics and Computer Engineering student at Virginia Tech"
-url                      : https://samuelstoke-vt.github.io/ # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
+url                      : "https://samuelstoke-vt.github.io/" # the base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+repository               : "samuelstoke-vt/samuelstoke-vt.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
